[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1part1"
path = "src/day1/part1.rs"

[[bin]]
name = "day1part2"
path = "src/day1/part2.rs"

[[bin]]
name = "day2part1"
path = "src/day2/part1.rs"

[[bin]]
name = "day2part2"
path = "src/day2/part2.rs"

[[bin]]
name = "day3part1"
path = "src/day3/part1.rs"

[[bin]]
name = "day3part2"
path = "src/day3/part2.rs"

[[bin]]
name = "day4part1"
path = "src/day4/part1.rs"

[[bin]]
name = "day4part2"
path = "src/day4/part2.rs"

[[bin]]
name = "day5part1"
path = "src/day5/part1.rs"

[[bin]]
name = "day5part2"
path = "src/day5/part2.rs"

[[bin]]
name = "day6part1"
path = "src/day6/part1.rs"

[[bin]]
name = "day6part2"
path = "src/day6/part2.rs"

[[bin]]
name = "day7part1"
path = "src/day7/part1.rs"

[[bin]]
name = "day7part2"
path = "src/day7/part2.rs"

[[bin]]
name = "day8part1"
path = "src/day8/part1.rs"

[[bin]]
name = "day8part2"
path = "src/day8/part2.rs"

[[bin]]
name = "day9part1"
path = "src/day9/part1.rs"

[[bin]]
name = "day9part2"
path = "src/day9/part2.rs"

[[bin]]
name = "day10part1"
path = "src/day10/part1.rs"

[[bin]]
name = "day10part2"
path = "src/day10/part2.rs"

[[bin]]
name = "day11part1"
path = "src/day11/part1.rs"

[[bin]]
name = "day11part2"
path = "src/day11/part2.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
colored = "2.0.0"
itertools = "0.12.0"
num = "0.4.1"
